# kms-api

./: Cargo.toml  README.md
src/: clients.rs  main.rs  settings.rs
src/api/: v1.rs
src/api/v1/animals/: models.rs  routes.rs
src/api/v1/devices/: models.rs  routes.rs
src/clients/: dynamodb.rs  unifi.rs
src/v1/animals/: routes.rs
src/v1/devices/: routes.rs
